Fix a bunch of parsing and lexing issues